--- a/index.html
+++ b/index.html
@@ -18,8 +18,171 @@
       type="image/svg+xml"
       href="https://cdn-icons-png.flaticon.com/512/174/174863.png"
     />
-    <link rel="stylesheet" href="canonical" href="https://www.pinterest.es/" />
-    <title>Document</title>
+    <link rel="canonical" href="https://www.pinterest.es/" />
+    <title>Pinterest</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <img
+        src="https://cdn-icons-png.flaticon.com/512/174/174863.png"
+        alt="Icono de la aplicación"
+        width="30px"
+        height="auto"
+      />
+      <nav>
+        <ul>
+          <li><a href="https://www.pinterest.es/">Inicio</a></li>
+          <li><a href="https://www.pinterest.es/today/">Explorar</a></li>
+          <li>
+            <a href="https://www.pinterest.es/pin-creation-tool/">Crear</a>
+          </li>
+        </ul>
+      </nav>
+      <input type="text" placeholder="🔍 Buscar" />
+      <nav>
+        <button>🔔</button>
+        <button>💬</button>
+        <a href="#null">👤</a>
+        <button>🔽</button>
+      </nav>
+    </header>
+    <main>
+      <section id="recomendados">
+        <h1>Recomendados</h1>
+        <article>
+          <img
+            src="https://images.unsplash.com/photo-1704098712161-67949aaf0eee?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDF8fHxlbnwwfHx8fHw%3D"
+            alt="Fotografia"
+            height="300px"
+            width="auto"
+            loading="lazy"
+          />
+          <button>Guardar</button>
+          <button>
+            <img
+              src="https://cdn.icon-icons.com/icons2/2368/PNG/512/share_icon_143700.png"
+              alt="botón para compartir"
+              width="20px"
+              height="auto"
+            />
+          </button>
+          <button>
+            <img
+              src="https://cdn-icons-png.flaticon.com/256/17/17764.png"
+              alt="botón más opciones"
+              width="20px"
+              height="auto"
+            />
+          </button>
+        </article>
+        <article>
+          <img
+            src="https://images.unsplash.com/photo-1704426882813-8acfff020487?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDJ8fHxlbnwwfHx8fHw%3D"
+            alt="Fotografia"
+            height="300px"
+            width="auto"
+            loading="lazy"
+          />
+          <button>Guardar</button>
+          <button>
+            <img
+              src="https://cdn.icon-icons.com/icons2/2368/PNG/512/share_icon_143700.png"
+              alt="botón para compartir"
+              width="20px"
+              height="auto"
+            />
+          </button>
+          <button>
+            <img
+              src="https://cdn-icons-png.flaticon.com/256/17/17764.png"
+              alt="botón más opciones"
+              width="20px"
+              height="auto"
+            />
+          </button>
+        </article>
+        <article>
+          <img
+            src="https://images.unsplash.com/photo-1697778102282-e55408b6f03e?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDEwfHx8ZW58MHx8fHx8"
+            alt="Fotografia"
+            height="300px"
+            width="auto"
+            loading="lazy"
+          />
+          <button>Guardar</button>
+          <button>
+            <img
+              src="https://cdn.icon-icons.com/icons2/2368/PNG/512/share_icon_143700.png"
+              alt="botón para compartir"
+              width="20px"
+              height="auto"
+            />
+          </button>
+          <button>
+            <img
+              src="https://cdn-icons-png.flaticon.com/256/17/17764.png"
+              alt="botón más opciones"
+              width="20px"
+              height="auto"
+            />
+          </button>
+        </article>
+        <article>
+          <img
+            src="https://images.unsplash.com/photo-1697676326755-c5bb361bfd5b?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDIwfHx8ZW58MHx8fHx8"
+            alt="Fotografia"
+            height="300px"
+            width="auto"
+            loading="lazy"
+          />
+          <button>Guardar</button>
+          <button>
+            <img
+              src="https://cdn.icon-icons.com/icons2/2368/PNG/512/share_icon_143700.png"
+              alt="botón para compartir"
+              width="20px"
+              height="auto"
+            />
+          </button>
+          <button>
+            <img
+              src="https://cdn-icons-png.flaticon.com/256/17/17764.png"
+              alt="botón más opciones"
+              width="20px"
+              height="auto"
+            />
+          </button>
+        </article>
+        <article>
+          <img
+            src="https://images.unsplash.com/photo-1697468792373-ad4181550a5a?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDd8fHxlbnwwfHx8fHw%3D"
+            alt="Fotografia"
+            height="300px"
+            width="auto"
+            loading="lazy"
+          />
+          <button>Guardar</button>
+          <button>
+            <img
+              src="https://cdn.icon-icons.com/icons2/2368/PNG/512/share_icon_143700.png"
+              alt="botón para compartir"
+              width="20px"
+              height="auto"
+            />
+          </button>
+          <button>
+            <img
+              src="https://cdn-icons-png.flaticon.com/256/17/17764.png"
+              alt="botón más opciones"
+              width="20px"
+              height="auto"
+            />
+          </button>
+        </article>
+      </section>
+    </main>
+    <footer>
+      <p>© copyright 2024 Pinterest Todos los derechos reservados</p>
+    </footer>
+  </body>
 </html>
