--- a/index.html
+++ b/index.html
@@ -34,16 +34,17 @@
           <li><a href="https://www.pinterest.es/">Inicio</a></li>
           <li><a href="https://www.pinterest.es/today/">Explorar</a></li>
           <li>
-            <a href="https://www.pinterest.es/pin-creation-tool/">Crear</a>
+            <a href="#footer">Crear</a>
           </li>
         </ul>
       </nav>
       <input type="text" placeholder="🔍 Buscar" />
       <nav>
-        <button>🔔</button>
-        <button>💬</button>
-        <a href="#null">👤</a>
-        <button>🔽</button>
+        <ul>
+          <li><a href="#null">🔔</a></li>
+          <li><a href="#null">💬</a></li>
+          <li><a href="#null">👤</a></li>
+        </ul>
       </nav>
     </header>
     <main>
@@ -181,7 +182,7 @@
         </article>
       </section>
     </main>
-    <footer>
+    <footer id="footer">
       <p>© copyright 2024 Pinterest Todos los derechos reservados</p>
     </footer>
   </body>
