--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <title>Pinterest</title>
   </head>
   <body>
-    <header>
+    <header id="header">
       <img
         src="https://cdn-icons-png.flaticon.com/512/174/174863.png"
         alt="Icono de la aplicación"
@@ -31,8 +31,8 @@
       />
       <nav>
         <ul>
-          <li><a href="https://www.pinterest.es/">Inicio</a></li>
-          <li><a href="https://www.pinterest.es/today/">Explorar</a></li>
+          <li><a href="#header">Inicio</a></li>
+          <li><a href="#recomendados">Explorar</a></li>
           <li>
             <a href="#footer">Crear</a>
           </li>
